resolved bug 15534
SVN-Revision: 23857